fix: some problems
