# pkg/core/handler/audit/audit.go
@@ -24,20 +24,20 @@ import (
 	"github.com/go-chi/render"
 )
 
-// Audit handles the auditing process based on the specified condition.
+// Audit handles the auditing process based on the specified locator.
 //
 // @Summary      Audit based on locator.
 // @Description  This endpoint audits based on the specified locator.
 // @Tags         audit
 // @Accept       json
 // @Produce      json
-// @Param        request  body      AuditPayload   true  "Locator for perform the audit"
-// @Success      200      {array}   scanner.Issue  "Audit results"
-// @Failure      400      {string}  string         "Bad Request"
-// @Failure      401      {string}  string         "Unauthorized"
-// @Failure      429      {string}  string         "Too Many Requests"
-// @Failure      404      {string}  string         "Not Found"
-// @Failure      500      {string}  string         "Internal Server Error"
+// @Param        request  body      AuditPayload     true  "Locator for perform the audit"
+// @Success      200      {array}   audit.AuditData  "Audit results"
+// @Failure      400      {string}  string           "Bad Request"
+// @Failure      401      {string}  string           "Unauthorized"
+// @Failure      429      {string}  string           "Too Many Requests"
+// @Failure      404      {string}  string           "Not Found"
+// @Failure      500      {string}  string           "Internal Server Error"
 // @Router       /api/v1/audit [post]
 func Audit(auditMgr *audit.AuditManager) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -73,20 +73,20 @@ func Audit(auditMgr *audit.AuditManager) http.HandlerFunc {
 // AuditManifest returns an HTTP handler function that performs auditing of manifest
 // data. It utilizes an AuditManager to execute the audit logic.
 //
-//	@Summary      AuditManifest audits the provided manifest.
-//	@Description  This endpoint audits the provided manifest for issues.
-//	@Tags         audit
-//	@Accept       plain
-//	@Accept       json
-//	@Produce      json
-//	@Param        request  body      AuditPayload   true  "Manifest data to audit (either plain text or JSON format)"
-//	@Success      200      {array}   scanner.Issue  "Audit results"
-//	@Failure      400      {string}  string         "Bad Request"
-//	@Failure      401      {string}  string         "Unauthorized"
-//	@Failure      429      {string}  string         "Too Many Requests"
-//	@Failure      404      {string}  string         "Not Found"
-//	@Failure      500      {string}  string         "Internal Server Error"
-//	@Router       /api/v1/audit/manifest [post]
+//  @Summary      AuditManifest audits the provided manifest.
+//  @Description  This endpoint audits the provided manifest for issues.
+//  @Tags         audit
+//  @Accept       plain
+//  @Accept       json
+//  @Produce      json
+//  @Param        request  body      AuditPayload   true  "Manifest data to audit (either plain text or JSON format)"
+//  @Success      200      {array}   scanner.Issue  "Audit results"
+//  @Failure      400      {string}  string         "Bad Request"
+//  @Failure      401      {string}  string         "Unauthorized"
+//  @Failure      429      {string}  string         "Too Many Requests"
+//  @Failure      404      {string}  string         "Not Found"
+//  @Failure      500      {string}  string         "Internal Server Error"
+//  @Router       /api/v1/audit/manifest [post]
 func AuditManifest(auditMgr *audit.AuditManager) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		// Extract the context and logger from the request.
@@ -121,20 +121,20 @@ func AuditManifest(auditMgr *audit.AuditManager) http.HandlerFunc {
 // audited manifest. It utilizes an AuditManager to compute the score based
 // on detected issues.
 //
-//	@Summary      ScoreHandler calculates a score for the audited manifest.
-//	@Description  This endpoint calculates a score for the provided manifest based on the number and severity of issues detected during the audit.
-//	@Tags         audit
-//	@Accept       text/plain
-//	@Accept       application/json
-//	@Produce      json
-//	@Param        request  body      AuditPayload     true  "Manifest data to calculate score for (either plain text or JSON format)"
-//	@Success      200      {object}  audit.ScoreData  "Score calculation result"
-//	@Failure      400      {string}  string           "Bad Request"
-//	@Failure      401      {string}  string           "Unauthorized"
-//	@Failure      429      {string}  string           "Too Many Requests"
-//	@Failure      404      {string}  string           "Not Found"
-//	@Failure      500      {string}  string           "Internal Server Error"
-//	@Router       /api/v1/audit/score [post]
+//  @Summary      ScoreHandler calculates a score for the audited manifest.
+//  @Description  This endpoint calculates a score for the provided manifest based on the number and severity of issues detected during the audit.
+//  @Tags         audit
+//  @Accept       text/plain
+//  @Accept       application/json
+//  @Produce      json
+//  @Param        request  body      AuditPayload     true  "Manifest data to calculate score for (either plain text or JSON format)"
+//  @Success      200      {object}  audit.ScoreData  "Score calculation result"
+//  @Failure      400      {string}  string           "Bad Request"
+//  @Failure      401      {string}  string           "Unauthorized"
+//  @Failure      429      {string}  string           "Too Many Requests"
+//  @Failure      404      {string}  string           "Not Found"
+//  @Failure      500      {string}  string           "Internal Server Error"
+//  @Router       /api/v1/audit/score [post]
 func Score(auditMgr *audit.AuditManager) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		// Extract the context and logger from the request.
