# pkg/core/manager/audit/types.go
@@ -14,6 +14,8 @@
 
 package audit
 
+import "github.com/KusionStack/karbour/pkg/scanner"
+
 // ScoreData encapsulates the results of scoring an audited manifest. It provides
 // a numerical score along with statistics about the total number of issues and
 // their severities.
@@ -36,4 +38,29 @@ type ScoreData struct {
 	// number of occurrences. It allows for a quick overview of the distribution
 	// of issues across different severity categories.
 	SeverityStatistic map[string]int `json:"severityStatistic"`
+}
+
+// AuditData represents the aggregated data of scanner issues, including the
+// original list of issues and their aggregated count based on title.
+type AuditData struct {
+	ResourcesTotal int              `json:"resourcesTotal"`
+	Aggregated     map[string]int   `json:"aggregated"`
+	Issues         []*scanner.Issue `json:"issues"`
+}
+
+// NewAuditData initializes an AuditData instance by aggregating the counts of
+// each issue's title from the provided list of issues.
+func NewAuditData(issues []*scanner.Issue, total int) *AuditData {
+	data := &AuditData{
+		ResourcesTotal: total,
+		Issues:         issues,
+		Aggregated:     make(map[string]int),
+	}
+
+	// Aggregate counts of each issue's title
+	for _, issue := range data.Issues {
+		data.Aggregated[issue.Title]++
+	}
+
+	return data
 }
